fixed menu first element on ios

--- a/mobile/src/app/app.scss
+++ b/mobile/src/app/app.scss
@@ -20,6 +20,10 @@
 @import "../theme/main";
 
 ion-menu{
+	
+	.list-ios > .item-block:first-child {
+		border-top: 0px;
+	}
 
 	.nav-itm-button{
 		background-color: transparent;
